Optimization of code
I just clean up the code and optimize some things

- Remove the IP changer
- Better loop for plugin selection
- Better management of class call in client
- Remove duplicate function in HTTPStatus class, i don't know why i do that previously ....
- When the song is already started, i see the real time elapsed
- Using Fetch() instead of XMLHttpRequest()

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta property="og:title" content="Beat Saber Overlay | By Hyldra Zolxy" />
         <meta property="og:description" content="A Beat Saber Overlay for HTTPStatus and DataPuller mods" />
         <meta property="og:url" content="https://overlay.hyldrazolxy.fr/" />
-        <!-- <meta property="og:image" content="./images/OGCard.png" /> -->
+        <meta property="og:image" content="https://overlay.hyldrazolxy.fr/preview/Full-inWorking-Cut.png" />
 
         <title>Beat Saber Overlay | By Hyldra Zolxy</title>
         <!-- <link rel="icon" href="./images/icon.png" type="image/png" /> -->
