--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="icon" href="./images/favicon.png" type="image/png" />
 
         <script type="text/javascript" src="./js/jquery-3.6.0.min.js"></script>
-        <script type="text/javascript" src="js/global.js"></script>
+        <script type="text/javascript" src="./js/global.js"></script>
         <script type="module" src="./js/app.js"></script>
     </head>
     <body>
