Setup panel modification + some cleanup
- Setup panel have now a good design
- Little clean up of the code

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <section id="overlay">
                 <div id="playerCard"></div>
                 <div id="songCard"></div>
-                <div id="setup"></div>
             </section>
+            <section id="setup"></section>
         </main>
     </body>
 </html>
