--- a/skins/songCard/freemium/index.html
+++ b/skins/songCard/freemium/index.html
@@ -11,13 +11,11 @@
     <p class="descBar difficultyClass" id="bpm"></p>
 </div>
 <div id="songData">
-    <div id="songNameSubName">
-        <p id="title"></p>
-        <p id="subTitle"></p>
-    </div>
-    <div id="songAuthorMapper">
-        <p id="mapper"></p>
-        <p id="author"></p>
+    <div id="songDataInfo">
+        <span id="title"></span>
+        <span id="subTitle"></span>
+        <span id="mapper"></span>
+        <span id="author"></span>
     </div>
 </div>
 <div id="songAccuracyDiv">
