--- a/skins/setup/default/songCard.html
+++ b/skins/setup/default/songCard.html
@@ -14,6 +14,7 @@
             <option value="">-- Please choose an option --</option>
             <option value="default">Default</option>
             <option value="freemium">Freemium</option>
+            <option value="reselim">Reselim_</option>
         </select>
     </p>
 
