Add Mapper and bsr key in Reselim_ skin

--- a/skins/songCard/reselim/index.html
+++ b/skins/songCard/reselim/index.html
@@ -32,12 +32,16 @@
                 <span id="subTitle">Subtitle</span>
             </div>
 
-            <span id="author">Artist</span>
+            <div id="makers">
+                <span id="author">Artist</span>
+                <span id="mapper">Mapper</span>
+            </div>
         </div>
 
         <div>
             <span id="difficulty">Easy</span>
             <span id="bpm">0 BPM</span>
+            <span id="bsrKey">!bsr 485de</span>
         </div>
     </div>
 </div>
