Modification of Reselim_ Skin
- Position of the Score is now accurate of the real one,
- Score is now separated by commas,
- I forgot to add "%" for percentage,
- Percentage is now 1 digit after comma

Score store is now String, not number (for commas support)

--- a/skins/songCard/reselim/index.html
+++ b/skins/songCard/reselim/index.html
@@ -1,7 +1,7 @@
 <div id="performance">
     <div class="performance-group">
         <span class="text" id="accuracyToLetters">E</span>
-        <span class="subtext" id="accuracy">0%</span>
+        <span class="subtext" id="accuracy">0</span>
     </div>
 
     <div class="performance-group">
