Forgot that thing, i'm the worst xD
- Delete the "test" in the url

--- a/skins/setup/default/home.html
+++ b/skins/setup/default/home.html
@@ -16,7 +16,7 @@
 <div id="urlTextSetup">
     <p>
         <label for="urlText">URL Customized with your settings</label>
-        <textarea readonly="readonly" id="urlText" onclick="this.select()">https://testoverlay.hyldrazolxy.fr/</textarea>
+        <textarea readonly="readonly" id="urlText" onclick="this.select()">https://overlay.hyldrazolxy.fr/</textarea>
     </p>
 </div>
 
