--- a/skins/playerCard/default/index.html
+++ b/skins/playerCard/default/index.html
@@ -2,7 +2,7 @@
     <div id="playerFlag"></div>
 </div>
 <div id="playerData">
-    <p id="topCountry" class="topCountryLeft">0</p>
-    <p id="topWorld" class="topWorldLeft">0</p>
+    <p id="topCountry" class="topCountry">0</p>
+    <p id="topWorld" class="topWorld">0</p>
     <p id="performancePoint">0</p>
 </div>
