--- a/skins/songCard/default/index.html
+++ b/skins/songCard/default/index.html
@@ -16,8 +16,8 @@
     </div>
     <div id="songDataInfoBar">
         <div id="songBarLength">
-            <div id="timeToBarLength"></div>
+            <div id="timeToPercentage"></div>
         </div>
-        <p id="accuracy">100.99</p>
+        <p id="accuracy">125.9</p>
     </div>
 </div>
