--- a/skins/songCard/freemium/index.html
+++ b/skins/songCard/freemium/index.html
@@ -1,6 +1,6 @@
 <div id="cover">
     <div id="songBarLength">
-        <div id="timeToBarLength"></div>
+        <div id="timeToPercentage"></div>
     </div>
 </div>
 <div id="songDataCover">
@@ -12,15 +12,17 @@
 </div>
 <div id="songData">
     <div id="songDataInfo">
-        <span id="title"></span>
-        <span id="subTitle"></span>
-        <span id="mapper"></span>
-        <span id="author"></span>
+        <p>
+            <span id="title"></span>
+            <span id="subTitle"></span>
+            <span id="mapper"></span>
+            <span id="author"></span>
+        </p>
     </div>
 </div>
 <div id="songAccuracyDiv">
     <p id="accuracy"></p>
 </div>
 <div id="songAccuracyLetterDiv">
-    <p id="accuracyToLetters">A</p>
+    <p id="accuracyToLetters" class="accuracyToLetterClass">A</p>
 </div>
