--- a/skins/songCard/reselim/index.html
+++ b/skins/songCard/reselim/index.html
@@ -4,6 +4,11 @@
         <span class="subtext" id="accuracy">0</span>
     </div>
 
+    <div class="performance-group" id="missGroup">
+        <span class="text" id="miss">0</span>
+        <span class="subtext">Miss</span>
+    </div>
+
     <div class="performance-group">
         <span class="text" id="combo">0</span>
         <span class="subtext">Combo</span>
