--- a/skins/setup/default/general.html
+++ b/skins/setup/default/general.html
@@ -1,24 +1,11 @@
-<button class="returnButton">< Return</button>
-<button class="closeButton">&times;</button>
-
-<div id="headerSetup">
-    <h1>General Setup</h1>
-
-    <hr />
-</div>
-
-<div id="parametersSetup">
-    <p>
-        <label for="ip">IP:</label>
-        <input type="text" placeholder="127.0.0.1 [Localhost]" id="ip" />
-        <input type="button" id="ipChanger" value="Apply" />
-    </p>
-
-    <p>
-        <label for="playerId">ScoreSaber link:</label>
-        <input type="text" placeholder="https://scoresaber.com/u/76561198235823594" id="playerId" />
-        <input type="button" id="playerIdChanger" value="Apply" />
-    </p>
-
-    <div id="moreSpaceSetup"></div>
+<div id="module">
+    <label for="ip">
+        <div class="blurredBackground"></div>
+        <span>IP:
+            <a href="#" class="ion-ios-help-outline" title="If you want to use a second pc to stream, you can write it's ip address to make the overlay connect to your game
+If not, leave it blank"></a>
+        </span>
+        <input type="text" placeholder="localhost / 127.0.0.1" id="ip" />
+        <input type="button" id="ipChanger" value="Apply" title="Apply Settings" />
+    </label>
 </div>
