--- a/skins/setup/default/playerCard.html
+++ b/skins/setup/default/playerCard.html
@@ -1,15 +1,24 @@
-<button class="returnButton">< Return</button>
-<button class="closeButton">&times;</button>
+<span id="switchLabel">Preview</span>
+<label class="switch">
+    <input type="checkbox" id="switchPlayerPreview" title="Switch On/Off Preview">
+    <span class="slider round"></span>
+</label>
 
-<div id="headerSetup">
-    <h1>Player Card Settings</h1>
+<div id="module">
+    <label for="playerId">
+        <div class="blurredBackground"></div>
+        <span>ScoreSaber ID:
+            <a href="#" class="ion-ios-help-outline" title="If you want to use the player card, you have to give your ScoreSaber ID or the link of your ScoreSaber profile"></a>
+        </span>
+        <input type="text" placeholder="https://scoresaber.com/u/76561198235823594" id="playerId" />
+        <input type="button" id="playerIdChanger" value="Apply" title="Apply Settings" />
+    </label>
 
-    <hr />
-</div>
-
-<div id="parametersSetup">
-    <p>
-        <label for="playerCardPosition">Position:</label>
+    <label for="playerCardPosition">
+        <div class="blurredBackground"></div>
+        <span>Position:
+            <a href="#" class="ion-ios-help-outline" title="This is to change the position of the player card"></a>
+        </span>
         <select id="playerCardPosition" name="playerCardPosition">
             <option value="">-- Please choose an option --</option>
             <option value="top-left">Top-left</option>
@@ -17,12 +26,13 @@
             <option value="bottom-left">bottom-left</option>
             <option value="bottom-right">bottom-right</option>
         </select>
-    </p>
+    </label>
 
-    <p>
-        <label for="playerCardScale">Scale:</label>
+    <label for="playerCardScale">
+        <div class="blurredBackground"></div>
+        <span>Scale:
+            <a href="#" class="ion-ios-help-outline" title="This is to change the scale of the player card"></a>
+        </span>
         <input type="range" min="0.50" max="1.70" step="0.01" id="playerCardScale" />
-    </p>
-
-    <div id="moreSpaceSetup"></div>
+    </label>
 </div>
