--- a/skins/setup/default/songCard.html
+++ b/skins/setup/default/songCard.html
@@ -1,25 +1,28 @@
-<button class="returnButton">< Return</button>
-<button class="closeButton">&times;</button>
+<span id="switchLabel">Preview</span>
+<label class="switch">
+    <input type="checkbox" id="switchSongPreview" title="Switch On/Off Preview">
+    <span class="slider round"></span>
+</label>
 
-<div id="headerSetup">
-    <h1>Song Card Settings</h1>
-
-    <hr />
-</div>
-
-<div id="parametersSetup">
-    <p>
-        <label for="songCardSkin">Skin:</label>
+<div id="module">
+    <label for="songCardSkin">
+        <div class="blurredBackground"></div>
+        <span>Skin:
+            <a href="#" class="ion-ios-help-outline" title="This is to change the skin of the song card"></a>
+        </span>
         <select id="songCardSkin" name="songCardSkin">
             <option value="">-- Please choose an option --</option>
             <option value="default">Default</option>
             <option value="freemium">Freemium</option>
             <option value="reselim">Reselim_</option>
         </select>
-    </p>
+    </label>
 
-    <p>
-        <label for="songCardPosition">Position:</label>
+    <label for="songCardPosition">
+        <div class="blurredBackground"></div>
+        <span>Position:
+            <a href="#" class="ion-ios-help-outline" title="This is to change the position of the song card"></a>
+        </span>
         <select id="songCardPosition" name="songCardPosition">
             <option value="">-- Please choose an option --</option>
             <option value="top-left">Top-left</option>
@@ -27,10 +30,13 @@
             <option value="bottom-left">bottom-left</option>
             <option value="bottom-right">bottom-right</option>
         </select>
-    </p>
+    </label>
 
-    <p>
-        <label for="songCardScale">Scale:</label>
+    <label for="songCardScale">
+        <div class="blurredBackground"></div>
+        <span>Scale:
+            <a href="#" class="ion-ios-help-outline" title="This is to change the scale of the song card"></a>
+        </span>
         <input type="range" min="0.50" max="1.70" step="0.01" id="songCardScale" />
-    </p>
+    </label>
 </div>
