--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
         <meta charset="UTF-8" />
 
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <meta name="description" content="This is an overlay that can be used with an plugin (mod) for BeatSaber.
-            It takes the data produced by the plugin(s) in order to display them, so that you can display them through a record or a stream">
+        <meta name="description" content="This is an overlay that can be used with a plugin (mod) for BeatSaber.
+            It takes the data produced by the plugin(s) in order to display them, so you can display them on a record or a stream" />
 
         <meta property="og:site_name" content="Beat Saber Overlay | By Hyldra Zolxy | For BSPlus, HTTPStatus, HTTPSiraStatus and DataPuller plugins !" />
         <meta property="og:type" content="website" />
@@ -14,9 +14,11 @@
             It takes the data produced by the plugin(s) in order to display them, so that you can display them through a record or a stream" />
         <meta property="og:url" content="https://overlay.hyldrazolxy.fr/" />
         <meta property="og:image" content="https://overlay.hyldrazolxy.fr/preview/Overlay_BS_New_Light.gif" />
+        <meta name="twitter:card" content="summary_large_image" />
 
         <title>Beat Saber Overlay | By Hyldra Zolxy | For BSPlus, HTTPStatus, HTTPSiraStatus and DataPuller plugins !</title>
         <link rel="icon" href="./pictures/favicon.png" type="image/png" />
+
         <link rel="stylesheet" href="./ionicons.min.css" type="text/css" />
         <link rel="stylesheet" href="./style.global.css" type="text/css" />
 
@@ -80,7 +82,7 @@
                         </div>
                     </div>
 
-                    <div id="BSOVersion">v2.1.0</div>
+                    <div id="BSOVersion">Overlay v2.1.0</div>
                 </div>
             </section>
 
