Minor fix for HTTPStatus / HTTPSiraStatus
- Forgot to add paused = false in two event

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <div id="songCard" class="hidden"></div>
             </section>
 
-            <section id="setupPanel">
+            <section id="setupPanel" class="hidden">
                 <div id="setup"></div> <!-- filled with TypeScript elements -->
 
                 <div id="setupMedia">
@@ -82,7 +82,7 @@
                         </div>
                     </div>
 
-                    <div id="BSOVersion">Overlay v2.1.0</div>
+                    <div id="BSOVersion">Overlay v2.1.1a</div>
                 </div>
             </section>
 
