--- a/skins/songCard/reselim/index.html
+++ b/skins/songCard/reselim/index.html
@@ -4,7 +4,7 @@
         <span class="subtext" id="accuracy">0</span>
     </div>
 
-    <div class="performance-group" id="missGroup">
+    <div class="performance-group missGroup">
         <span class="text" id="miss">0</span>
         <span class="subtext">Miss</span>
     </div>
