Modification of Dietah skin
- Some tweak

--- a/skins/songCard/dietah/index.html
+++ b/skins/songCard/dietah/index.html
@@ -1,20 +1,22 @@
 <p id="title">Title</p>
 <p id="author">Author</p>
 <div id="infoGroup">
-    <p id="bsrKey">25z84</p>
-    <p id="mapper">Mapper</p>
-    <p id="difficulty" class="difficultyClass ExpertPlus">Expert +</p>
-</div>
-<div id="timeBarGroup">
     <div id="timeBarInfo">
         <p id="timeToLetters">0:25</p>
         <p id="totalTimeToLetters">3:24</p>
     </div>
+    <p id="mapper">Mapper</p>
+    <p id="difficulty" class="difficultyClass ExpertPlus">Expert +</p>
+</div>
+<div id="timeBarGroup">
     <div id="songBarLength">
         <div id="timeToPercentage"></div>
     </div>
 </div>
 <div id="performanceGroup">
-    <p id="miss" class="fcMiss ion-android-checkmark-circle missGroup">FC</p>
-    <p id="accuracy">94.2</p>
+    <p id="bsrKey">25z84</p>
+    <div id="infoPerformanceGroup">
+        <p id="miss" class="fcMiss ion-android-checkmark-circle missGroup">FC</p>
+        <p id="accuracy">94.2</p>
+    </div>
 </div>
