--- a/skins/songCard/default/index.html
+++ b/skins/songCard/default/index.html
@@ -1,23 +1,27 @@
-<div id="cover">
-    <p id="ranked">Ranked</p>
-</div>
-<div id="songData">
-    <div id="songNameSubName">
-        <p id="title">[BLEED BLOOD]</p>
-        <p id="subTitle">SubNameTest</p>
+<div id="songCardGroup">
+    <div id="cover">
+        <p id="ranked">Ranked</p>
+        <p id="qualified">Qualified</p>
+        <p id="logoLeaderboard" class="logoLeaderboardSong"></p>
     </div>
-    <div id="songAuthorMapper">
-        <p id="mapper">Jabob</p>
-        <p id="author">Camellia</p>
-    </div>
-    <div id="songDataInfo">
-        <p id="difficulty" class="difficultyClass ExpertPlus">Expert +</p>
-        <p id="bsrKey">10217</p>
-    </div>
-    <div id="songDataInfoBar">
-        <div id="songBarLength">
-            <div id="timeToPercentage"></div>
+    <div id="songData">
+        <div id="songNameSubName">
+            <p id="title">[BLEED BLOOD]</p>
+            <p id="subTitle">SubNameTest</p>
         </div>
-        <p id="accuracy">125.9</p>
+        <div id="songAuthorMapper">
+            <p id="mapper">Jabob</p>
+            <p id="author">Camellia</p>
+        </div>
+        <div id="songDataInfo">
+            <p id="difficulty" class="difficultyClass ExpertPlus">Expert +</p>
+            <p id="bsrKey">10217</p>
+        </div>
+        <div id="songDataInfoBar">
+            <div id="songBarLength">
+                <div id="timeToPercentage"></div>
+            </div>
+            <p id="accuracy">125.9</p>
+        </div>
     </div>
 </div>
