--- a/skins/songCard/freemium/index.html
+++ b/skins/songCard/freemium/index.html
@@ -1,28 +1,31 @@
-<div id="cover">
-    <div id="songBarLength">
-        <div id="timeToPercentage"></div>
+<div id="songCardGroup">
+    <div id="cover">
+        <div id="songBarLength">
+            <div id="timeToPercentage"></div>
+        </div>
+        <p id="logoLeaderboard" class="logoLeaderboardSong"></p>
     </div>
-</div>
-<div id="songDataCover">
-    <p class="descBar difficultyClass" id="qualified">Qualified</p>
-    <p class="descBar difficultyClass" id="ranked">Ranked</p>
-    <p class="descBar difficultyClass" id="bsrKey"></p>
-    <p class="descBar difficultyClass" id="difficulty"></p>
-    <p class="descBar difficultyClass" id="bpm"></p>
-</div>
-<div id="songData">
-    <div id="songDataInfo">
-        <p>
-            <span id="title"></span>
-            <span id="subTitle"></span>
-            <span id="mapper"></span>
-            <span id="author"></span>
-        </p>
+    <div id="songDataCover">
+        <p class="descBar difficultyClass" id="qualified">Qualified</p>
+        <p class="descBar difficultyClass" id="ranked">Ranked</p>
+        <p class="descBar difficultyClass" id="bsrKey"></p>
+        <p class="descBar difficultyClass" id="difficulty"></p>
+        <p class="descBar difficultyClass" id="bpm"></p>
     </div>
-</div>
-<div id="songAccuracyDiv">
-    <p id="accuracy"></p>
-</div>
-<div id="songAccuracyLetterDiv">
-    <p id="accuracyToLetters" class="accuracyToLetterClass">A</p>
+    <div id="songData">
+        <div id="songDataInfo">
+            <p>
+                <span id="title"></span>
+                <span id="subTitle"></span>
+                <span id="mapper"></span>
+                <span id="author"></span>
+            </p>
+        </div>
+    </div>
+    <div id="songAccuracyDiv">
+        <p id="accuracy"></p>
+    </div>
+    <div id="songAccuracyLetterDiv">
+        <p id="accuracyToLetters" class="accuracyToLetterClass">A</p>
+    </div>
 </div>
