--- a/skins/playerCard/default/index.html
+++ b/skins/playerCard/default/index.html
@@ -1,8 +1,11 @@
-<div id="avatar">
-    <div id="playerFlag"></div>
-</div>
-<div id="playerData">
-    <p id="topCountry" class="topCountry">0</p>
-    <p id="topWorld" class="topWorld">0</p>
-    <p id="performancePoint">0</p>
+<div id="playerCardGroup">
+    <div id="avatar">
+        <div id="playerFlag"></div>
+        <p id="logoLeaderboard" class="logoLeaderboardPlayer"></p>
+    </div>
+    <div id="playerData">
+        <p id="topCountry" class="topCountry">0</p>
+        <p id="topWorld" class="topWorld">0</p>
+        <p id="performancePoint">0</p>
+    </div>
 </div>
