Forgot to update the main folder

--- a/skins/playerCard/default/index.html
+++ b/skins/playerCard/default/index.html
@@ -1,7 +1,7 @@
 <div id="playerCardGroup">
     <div id="avatar">
         <div id="playerFlag"></div>
-        <p id="logoLeaderboard" class="logoLeaderboardPlayer"></p>
+        <p id="logoLeaderboardPlayer" class="logoLeaderboardPlayer"></p>
     </div>
     <div id="playerData">
         <p id="topCountry" class="topCountry">0</p>
