--- a/skins/playerCard/freemium/index.html
+++ b/skins/playerCard/freemium/index.html
@@ -7,7 +7,7 @@
     <div id="playerData">
         <p id="playerName">Default Player</p>
         <div id="playerPerformance">
-            <p id="logoLeaderboard" class="logoLeaderboardPlayer"></p>
+            <p id="logoLeaderboardPlayer" class="logoLeaderboardPlayer"></p>
             <p id="topWorld">0</p>
             <p id="performancePoint">0</p>
         </div>
