--- a/skins/setup/default/generalMenu.html
+++ b/skins/setup/default/generalMenu.html
@@ -1,15 +1,14 @@
-<!--<button type="button" class="return" title="Return">< Return</button>-->
 <nav>
   <ul>
     <li class="generalSettings">
       <div class="icon ion-android-settings"></div>
       <p class="description">General Settings</p>
     </li>
-    <li class="gamesAndPlugins">
+    <li class="gamesAndPluginsSettings">
       <div class="icon ion-ios-game-controller-b"></div>
       <p class="description">Games & Plugins</p>
     </li>
-    <li class="songSettings">
+    <li class="overlaySettings">
       <div class="icon ion-android-desktop"></div>
       <p class="description">Overlay</p>
     </li>
