--- a/skins/songCard/default/index.html
+++ b/skins/songCard/default/index.html
@@ -2,7 +2,7 @@
     <div id="cover">
         <p id="ranked">Ranked</p>
         <p id="qualified">Qualified</p>
-        <p id="logoLeaderboard" class="logoLeaderboardSong"></p>
+        <p id="logoLeaderboardSong" class="logoLeaderboardSong"></p>
     </div>
     <div id="songData">
         <div id="songNameSubName">
