--- a/skins/songCard/reselim/index.html
+++ b/skins/songCard/reselim/index.html
@@ -49,7 +49,7 @@
                 <span id="bpm">0 BPM</span>
                 <span id="bsrKey">!bsr 485de</span>
 
-                <p id="logoLeaderboard" class="logoLeaderboardSong"></p>
+                <p id="logoLeaderboardSong" class="logoLeaderboardSong"></p>
             </div>
         </div>
     </div>
