--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
                         <a href="https://github.com/HyldraZolxy" class="roundedButton ion-social-github">
                             <p id="github">My GitHub account !</p>
                         </a>
-                        <a href="https://ko-fi.com/hyldrazolxy" class="roundedButton ion-card">
-                            <p id="koFi">If you want to support me 💖</p>
+                        <a href="https://github.com/sponsors/HyldraZolxy" class="roundedButton ion-card">
+                            <p id="githubSponsor">If you want to support me 💖</p>
                         </a>
                     </div>
                 </div>
@@ -74,7 +74,7 @@
 
         <!-- Javascript in last for better loading -->
         <script rel="preload" type="text/javascript" src="./libs/jquery-3.6.0.min.js"></script>
-        <!--<script rel="preload" type="text/javascript" src="./dist/main.js" async></script>--> <!--Prod mode-->
-        <script type="module" src="./js/init.js" async></script> <!--Dev mode-->
+        <script rel="preload" type="text/javascript" src="./dist/main.js" async></script> <!--Prod mode-->
+        <!--<script type="module" src="./js/init.js" async></script>--> <!--Dev mode-->
     </body>
 </html>
