--- a/skins/setup/default/gamesAndPluginsMenu.html
+++ b/skins/setup/default/gamesAndPluginsMenu.html
@@ -4,11 +4,11 @@
       <div class="icon ion-android-settings"></div>
       <p class="description">General Settings</p>
     </li>
-    <li class="gamesAndPlugins">
+    <li class="gamesAndPluginsSettings">
       <div class="icon ion-ios-game-controller-b"></div>
       <p class="description">Games & Plugins</p>
     </li>
-    <li class="songSettings">
+    <li class="overlaySettings">
       <div class="icon ion-android-desktop"></div>
       <p class="description">Overlay</p>
     </li>
