--- a/skins/songCard/freemium/index.html
+++ b/skins/songCard/freemium/index.html
@@ -3,7 +3,7 @@
         <div id="songBarLength">
             <div id="timeToPercentage"></div>
         </div>
-        <p id="logoLeaderboard" class="logoLeaderboardSong"></p>
+        <p id="logoLeaderboardSong" class="logoLeaderboardSong"></p>
     </div>
     <div id="songDataCover">
         <p class="descBar difficultyClass" id="qualified">Qualified</p>
