BigBSR and Miss display
- Add extras on the setup panel
- Add BigBSR management
- Add Display Miss management
- Fix player name placement on the player card
- Little modification of the min value in the Pos-X
- Little modification on the WebSocket manager
- Less time for WebSocket reconnection try

--- a/skins/playerCard/freemium/index.html
+++ b/skins/playerCard/freemium/index.html
@@ -5,7 +5,9 @@
         </div>
     </div>
     <div id="playerData">
-        <p id="playerName">Default Player</p>
+        <div id="playerInformation">
+            <p id="playerName">Default Player</p>
+        </div>
         <div id="playerPerformance">
             <p id="logoLeaderboardPlayer" class="logoLeaderboardPlayer"></p>
             <p id="topWorld">0</p>
