--- a/skins/setup/default/songCardOptions.html
+++ b/skins/setup/default/songCardOptions.html
@@ -39,7 +39,7 @@
             <span>Position X:
                 <a href="#" class="ion-ios-help-outline" title="This is to change the position X of the song card"></a>
             </span>
-            <input type="range" value="0" min="-700" max="700" step="1" id="songCardPosX" />
+            <input type="range" value="0" min="-300" max="700" step="1" id="songCardPosX" />
         </label>
     </div>
 
@@ -59,5 +59,44 @@
             </span>
             <input type="range" value="1" min="0.50" max="1.70" step="0.01" id="songCardScale" />
         </label>
+    </div>
+
+    <div class="moduleSection">
+        <label>
+            <span>Extras:
+                <a href="#" class="ion-ios-help-outline" title="Extras for the Song Card"></a>
+            </span>
+        </label>
+
+        <table>
+            <tr>
+                <td>
+                    <p class="inline">Display miss: <a href="#" class="ion-ios-help-outline" title="Only on Reselim Skin"></a></p>
+                </td>
+                <td>
+                    <input type="checkbox" id="missDisplay" class="checkboxInline" title="Switch On/Off Miss display">
+                </td>
+                <td>
+                    <p class="inline">Make the BSR bigger:</p>
+                </td>
+                <td>
+                    <input type="checkbox" id="bigBSR" class="checkboxInline" title="Switch On/Off Big BSR">
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p class="inline">PP Max on a map:</p>
+                </td>
+                <td>
+                    <input type="checkbox" disabled id="ppMax" class="checkboxInline" title="Switch On/Off PP Maximum">
+                </td>
+                <td>
+                    <p class="inline">PP Estimated by your score:</p>
+                </td>
+                <td>
+                    <input type="checkbox" disabled id="ppEstimated" class="checkboxInline" title="Switch On/Off PP Estimated">
+                </td>
+            </tr>
+        </table>
     </div>
 </div>
