Add position Reseting
- Add reset button for Pos-X and Pos-Y

--- a/skins/setup/default/playerCardOptions.html
+++ b/skins/setup/default/playerCardOptions.html
@@ -47,6 +47,7 @@
         <label for="playerCardPosX">
             <span>Position X:
                 <a href="#" class="ion-ios-help-outline" title="This is to change the position X of the player card"></a>
+                <a href="#" id="playerCardPosXReset" class="ion-refresh" title="Reset the position X of the player card"></a>
             </span>
             <input type="range" value="0" min="-300" max="700" step="1" id="playerCardPosX" />
         </label>
@@ -56,6 +57,7 @@
         <label for="playerCardPosY">
             <span>Position Y:
                 <a href="#" class="ion-ios-help-outline" title="This is to change the position Y of the player card"></a>
+                <a href="#" id="playerCardPosYReset" class="ion-refresh" title="Reset the position Y of the player card"></a>
             </span>
             <input type="range" value="0" min="-700" max="700" step="1" id="playerCardPosY" />
         </label>
