--- a/skins/setup/default/songCardOptions.html
+++ b/skins/setup/default/songCardOptions.html
@@ -38,6 +38,7 @@
         <label for="songCardPosX">
             <span>Position X:
                 <a href="#" class="ion-ios-help-outline" title="This is to change the position X of the song card"></a>
+                <a href="#" id="songCardPosXReset" class="ion-refresh" title="Reset the position X of the song card"></a>
             </span>
             <input type="range" value="0" min="-300" max="700" step="1" id="songCardPosX" />
         </label>
@@ -47,6 +48,7 @@
         <label for="songCardPosY">
             <span>Position Y:
                 <a href="#" class="ion-ios-help-outline" title="This is to change the position Y of the song card"></a>
+                <a href="#" id="songCardPosYReset" class="ion-refresh" title="Reset the position Y of the song card"></a>
             </span>
             <input type="range" value="0" min="-700" max="700" step="1" id="songCardPosY" />
         </label>
