--- a/skins/setup/default/leaderboardOptions.html
+++ b/skins/setup/default/leaderboardOptions.html
@@ -24,6 +24,7 @@
     <label for="leaderboardPosX">
             <span>Position X:
                 <a href="#" class="ion-ios-help-outline" title="This is to change the position X of the leaderboard"></a>
+                <a href="#" id="leaderboardPosXReset" class="ion-refresh" title="Reset the position X of the leaderboard"></a>
             </span>
       <input type="range" value="0" min="0" max="2000" step="1" id="leaderboardPosX" />
     </label>
@@ -33,6 +34,7 @@
     <label for="leaderboardPosY">
             <span>Position Y:
                 <a href="#" class="ion-ios-help-outline" title="This is to change the position Y of the leaderboard"></a>
+                <a href="#" id="leaderboardPosYReset" class="ion-refresh" title="Reset the position Y of the leaderboard"></a>
             </span>
       <input type="range" value="0" min="0" max="2000" step="1" id="leaderboardPosY" />
     </label>
