--- a/index.html
+++ b/index.html
@@ -28,7 +28,23 @@
             <section id="games-overlay">
                 <div id="playerCard-overlay"></div>
                 <div id="songCard-overlay"></div>
-                <div id="leaderboard-overlay"></div>
+                <table id="leaderboard-overlay">
+                    <tr id="row-" class="joined">
+                        <td class="position ion-pound">1</td>
+                        <td class="avatar">
+                            <div class="innerAvatar"></div>
+                        </td>
+                        <td class="pseudo">Gay Furry | BSFR | Hyldra Zolxy</td>
+                        <td class="score">521,265</td>
+                        <td class="percentage">92.23</td>
+                        <td class="fcMiss ion-android-checkmark-circle"> FC</td>
+                    </tr>
+                    <tr id="row-seperator">
+                        <td class="separator ion-more">
+                            <div class="playerLocalName localPlayer">...</div>
+                        </td>
+                    </tr>
+                </table>
             </section>
 
             <section id="games-setup" class="hidden">
@@ -74,7 +90,7 @@
 
         <!-- Javascript in last for better loading -->
         <script rel="preload" type="text/javascript" src="./libs/jquery-3.6.0.min.js"></script>
-        <script rel="preload" type="text/javascript" src="./dist/main.js" async></script> <!--Prod mode-->
-        <!--<script type="module" src="./js/init.js" async></script>--> <!--Dev mode-->
+        <!--<script rel="preload" type="text/javascript" src="./dist/main.js" async></script>--> <!--Prod mode-->
+        <script type="module" src="./js/init.js" async></script> <!--Dev mode-->
     </body>
 </html>
